Fix post flex align

--- a/css/post.css
+++ b/css/post.css
@@ -49,6 +49,7 @@
 #post-content {
     padding-left: 2rem;
     padding-right: 2rem;
+    align-self: stretch;
 }
 
 .wowhead-tooltip * {
